<resources>
    <string name="app_name">Домашние задания</string>
    <string name="ok_button">OK</string>
    <string name="reset_button">Сбросить</string>
    <string name="start_screen_name">Стартовый экран</string>
    <string name="start_screen_option_121">Задача 1.2.1: Универсальная форма ввода</string>
    <string name="start_screen_option_122">Задача 1.2.2: Бесконечный переход между экранами</string>
    <string name="start_screen_option_211">Задача 2.1.1: Взаимоисключающие CheckBox</string>
    <string name="start_screen_option_212">Задача 2.1.2: Spinner «Страны-города-улицы»</string>
    <string name="start_screen_option_213">Задача 2.1.3: CalendarView «Сроки задачи»</string>
    <string name="start_screen_option_221">Задача 2.2.1: Записная книжка в SharedPreferences</string>
    <string name="start_screen_option_311">Задача 3.1.1: Калькулятор</string>
    <string name="start_screen_option_312">Задача 3.1.2: Действия калькулятора</string>
    <string name="start_screen_option_321">Задача 3.2.1: Цепочка текста</string>
    <string name="start_screen_option_322">Задача 3.2.2: Инженерный вид калькулятора</string>
    <string name="start_screen_option_331">Задача 3.3.1: Адаптивная горизонтально-вертикальная верстка</string>
    <string name="start_screen_option_332">Задача 3.3.2: Страница переключения языка</string>
    <string name="start_screen_option_341">Задача 3.4.1: Переключение цветов в приложении</string>
    <string name="start_screen_option_342">Задача 3.4.2: Переключение отступов в приложении</string>
    <string name="start_screen_option_411">Задача 4.1.1: Отображение списка</string>
    <string name="start_screen_option_412">Задача 4.1.2: Взаимодействие со списком</string>
    <string name="start_screen_option_421">Задача 4.2.1: Список с custom элементами</string>
    <string name="start_screen_option_422">Задача 4.2.2: Перехват событий на элементах</string>
    <string name="start_screen_option_511">Задача 5.1.1: Сохранение текстового файла</string>
    <string name="start_screen_option_512">Задача 5.1.2: Выбор картинки для элемента из внешнего файла</string>
    <string name="start_screen_option_521">Задача 5.2.1: Сохранение/восстановление текста во внутренний файл</string>
    <string name="start_screen_option_522">Задача 5.2.2: Экспорт внутреннего файла во внешний и обратно.</string>
    <string name="start_screen_option_611">Задача 6.1.1: Логирование жизненного цикла активити</string>
    <string name="start_screen_option_612">Задача 6.1.2: Восстановление данных активити</string>
    <string name="start_screen_option_711">Задача 7.1.1: Синхронизация данных</string>
    <string name="start_screen_option_721">Задача 7.2.1: Открыть адрес на GoogleMap</string>
    <string name="start_screen_option_722">Задача 7.2.2: Позвонить по телефону/отправить СМС</string>
    <string name="go_start">Переходим к стартовому экрану</string>
    <string name="go_121">Переходим к 1.2.1</string>
    <string name="go_122">Переходим к 1.2.2</string>
    <string name="go_211">Переходим к 2.1.1</string>
    <string name="go_212">Переходим к 2.1.2</string>
    <string name="go_213">Переходим к 2.1.3</string>
    <string name="go_221">Переходим к 2.2.1</string>
    <string name="go_311">Переходим к 3.1.1</string>
    <string name="go_312">Переходим к 3.1.2</string>
    <string name="go_321">Переходим к 3.2.1</string>
    <string name="go_322">Переходим к 3.2.2</string>
    <string name="go_331">Переходим к 3.3.1</string>
    <string name="go_332">Переходим к 3.3.2</string>
    <string name="go_341">Переходим к 3.4.1</string>
    <string name="go_342">Переходим к 3.4.2</string>
    <string name="go_411">Переходим к 4.1.1</string>
    <string name="go_412">Переходим к 4.1.2</string>
    <string name="go_421">Переходим к 4.2.1</string>
    <string name="go_422">Переходим к 4.2.2</string>
    <string name="go_511">Переходим к 5.1.1</string>
    <string name="go_512">Переходим к 5.1.2</string>
    <string name="go_521">Переходим к 5.2.1</string>
    <string name="go_522">Переходим к 5.2.2</string>
    <string name="go_611">Переходим к 6.1.1</string>
    <string name="go_612">Переходим к 6.1.2</string>
    <string name="go_711">Переходим к 7.1.1</string>
    <string name="go_721">Переходим к 7.2.1</string>
    <string name="go_722">Переходим к 7.2.2</string>
    <string name="start_screen_text">Выберите задание для перехода на нужный экран.</string>
    <string-array name="tasks">
        <item>Выберите значение</item>
        <item>Задача 1.2.1: Универсальная форма ввода</item>
        <item>Задача 1.2.2: Бесконечный переход между экранами</item>
        <item>Задача 2.1.1: Взаимоисключающие CheckBox</item>
        <item>Задача 2.1.2: Spinner «Страны-города-улицы»</item>
        <item>Задача 2.1.3: CalendarView «Сроки задачи»</item>
        <item>Задача 2.2.1: Записная книжка в SharedPreferences</item>
        <item>Задача 3.1.1: Калькулятор</item>
        <item>Задача 3.1.2: Действия калькулятора</item>
        <item>Задача 3.2.1: Цепочка текста</item>
        <item>Задача 3.2.2: Инженерный вид калькулятора</item>
        <item>Задача 3.3.1: Адаптивная горизонтально-вертикальная верстка</item>
        <item>Задача 3.3.2: Страница переключения языка.</item>
        <item>Задача 3.4.1: Переключение цветов в приложении</item>
        <item>Задача 3.4.2: Переключение отступов в приложении</item>
        <item>Задача 4.1.1: Отображение списка</item>
        <item>Задача 4.1.2: Взаимодействие со списком</item>
        <item>Задача 4.2.1: Список с custom элементами</item>
        <item>Задача 4.2.2: Перехват событий на элементах</item>
        <item>Задача 5.1.1: Сохранение текстового файла</item>
        <item>Задача 5.1.2: Выбор картинки для элемента из внешнего файла</item>
        <item>Задача 5.2.1: Сохранение/восстановление текста во внутренний файл</item>
        <item>Задача 5.2.2: Экспорт внутреннего файла во внешний и обратно.</item>
        <item>Задача 6.1.1: Логирование жизненного цикла активити</item>
        <item>Задача 6.1.2: Восстановление данных активити</item>
        <item>Задача 7.1.1: Синхронизация данных</item>
        <item>Задача 7.2.1: Открыть адрес на GoogleMap</item>
        <item>Задача 7.2.2: Позвонить по телефону/отправить СМС</item>
    </string-array>
    <string name="name_input_fiels">Введите имя</string>
    <string name="email_input_field">Введите e-mail</string>
    <string name="subscribe_form_msg_name">Подписка на рассылку успешно оформлена для пользователя </string>
    <string name="subscribe_form_msg_email"> на электронный адрес </string>
    <string name="subscribe_form_err">Не заполнено одно из полей!</string>
    <string name="forward_button">Вперед</string>
    <string name="backward_button">Назад</string>
    <string name="input_sum">Введите сумму</string>
    <string name="input_pay_info">Введите информацию по оплате</string>
    <string name="check_pay_card">С банковской карты</string>
    <string name="check_pay_mobile">С мобильного телефона</string>
    <string name="check_pay_cash">Наличными по адресу</string>
    <string name="pay_msg">Произведен перевод на сумму: </string>
    <string-array name="countries">
        <item>Россия</item>
        <item>Украина</item>
        <item>Белоруссия</item>
    </string-array>
    <string-array name="r_cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
    </string-array>
    <string-array name="u_cities">
        <item>Киев</item>
        <item>Одесса</item>
        <item>Харьков</item>
    </string-array>
    <string-array name="b_cities">
        <item>Минск</item>
        <item>Гомель</item>
        <item>Торжок</item>
    </string-array>
    <string name="start_date_input">Дата-время старта задачи: </string>
    <string name="end_date_input">Дата-время окончания задачи: </string>
    <string name="error">Ошибка!</string>
    <string name="start">Старт: </string>
    <string name="end">Окончание: </string>
    <string name="note_input">Введите текст заметки</string>
    <string name="note_saved">Заметка сохранена</string>
    <string name="calc_one">1</string>
    <string name="calc_two">2</string>
    <string name="calc_three">3</string>
    <string name="calc_four">4</string>
    <string name="calc_five">5</string>
    <string name="calc_six">6</string>
    <string name="calc_seven">7</string>
    <string name="calc_eight">8</string>
    <string name="calc_nine">9</string>
    <string name="calc_zero">0</string>
    <string name="calc_dot">.</string>
    <string name="calc_reset">С</string>
    <string name="calc_plus_minus">+/-</string>
    <string name="calc_percent">%</string>
    <string name="calc_divide">/</string>
    <string name="calc_multiply">*</string>
    <string name="calc_minus">-</string>
    <string name="calc_plus">+</string>
    <string name="calc_equals">=</string>
    <string name="letter_p">P</string>
    <string name="letter_a">A</string>
    <string name="letter_n">N</string>
    <string name="letter_i">I</string>
    <string name="calc_mode_switch_button">Сменить режим</string>
    <string name="calc_sin">sin</string>
    <string name="calc_cos">cos</string>
    <string name="calc_tan">tan</string>
    <string name="calc_exp">EXP</string>
    <string name="calc_PI">PI</string>
    <string name="calc_ln">ln</string>
    <string name="calc_log">log</string>
    <string name="calc_square">SQR</string>
    <string name="calc_pwr">PWR</string>
    <string name="calc_factorial">x!</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string-array name="colors">
        <item>Черный</item>
        <item>Синий</item>
        <item>Зеленый</item>
    </string-array>
    <string-array name="margins">
        <item>Маленький</item>
        <item>Средний</item>
        <item>Большой</item>
    </string-array>
    <string name="book_name_label">Название книги</string>
    <string name="book_description_label">Описание книги</string>
    <string name="large_text">
        First Line
        \nSecond line
        \nThird line
        \nFourth Line</string>
    <string name="task_title_placeholder">Задача %d</string>
    <string-array name="classes">
        <item>121</item>
        <item>122</item>
        <item>211</item>
        <item>212</item>
        <item>213</item>
        <item>221</item>
        <item>311</item>
        <item>312</item>
        <item>321</item>
        <item>322</item>
        <item>331</item>
        <item>332</item>
        <item>341</item>
        <item>342</item>
        <item>411</item>
        <item>412</item>
        <item>421</item>
        <item>422</item>
        <item>511</item>
        <item>512</item>
        <item>521</item>
        <item>522</item>
        <item>611</item>
        <item>612</item>
        <item>711</item>
        <item>721</item>
        <item>722</item>
    </string-array>
    <string name="task_label">Задача </string>
    <string name="random_descr_label">Описание случайно сгенерированного элемента</string>
    <string name="header_label">Header: </string>
    <string name="class_label">Class: </string>
    <string name="no_resource_label">Нет ресурса</string>
    <string name="missing_read_perm">Missing read permission</string>
    <string name="missing_write_perm">Missing write permission</string>
    <string name="change_bg">Сменить фон</string>
    <string name="bg_not_found">Background not found, set to default</string>
    <string name="read_perm_failed">Read permission not granted</string>
    <string name="password_input_hint">Введите пароль</string>
    <string name="login_input_hint">Введите логин</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="correct_input_msg">Корректный ввод</string>
    <string name="incorrect_input_msg">Некорректный ввод</string>
</resources>