<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartScreenActivity">

    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:title="@string/start_screen_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_121"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_121"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_122"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_122"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_211"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_211"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_212"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_212"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_213"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_213"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_221"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_221"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_311"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_311"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_312"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_312"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_321"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_321"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_322"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_322"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_331"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_331"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_332"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_332"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_341"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_341"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_342"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_342"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_411"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_411"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_412"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_412"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_421"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_421"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_422"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_422"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_511"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_511"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_512"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_512"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_521"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_521"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_522"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_522"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_611"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_611"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_612"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_612"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_711"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_711"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_721"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_721"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_722"
        android:orderInCategory="100"
        android:title="@string/start_screen_option_722"
        app:showAsAction="never" />

</menu>