<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T_311"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/included_bar"
            layout="@layout/activity_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/inputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="@string/calc_zero"
            android:textAlignment="viewEnd"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_nine"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_eight"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_seven"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_six"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_five"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_four"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_three"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_two"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_one"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:padding="20dp"
            android:text="@string/calc_zero"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dotBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="20dp"
            android:text="@string/calc_dot"
            tools:ignore="ButtonStyle"/>


    </LinearLayout>


</LinearLayout>