<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T_312">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include
            android:id="@+id/included_bar"
            layout="@layout/activity_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/inputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/calcPanels"
            android:padding="20dp"
            android:text="@string/calc_zero"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorText"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/columns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/result"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/leftColumn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/controlsTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_reset"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/plusMinusBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_plus_minus"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/percentBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_percent"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numRowOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sevenBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_seven"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/eightBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_eight"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/nineBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_nine"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numRowTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fourBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_four"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/fiveBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_five"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/sixBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_six"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numRowThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/oneBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_one"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/twoBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_two"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/threeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_three"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/numRowFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/zeroBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_zero"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/dotBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/calcButtons"
                    android:text="@string/calc_dot"
                    android:textSize="24sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/controlsRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/divideBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calcControls"
                android:text="@string/calc_divide"
                android:textColor="@color/colorBG"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/multiplyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calcControls"
                android:text="@string/calc_multiply"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/minusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calcControls"
                android:text="@string/calc_minus"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/plusBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calcControls"
                android:text="@string/calc_plus"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/equalsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/calcControls"
                android:text="@string/calc_equals"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>